--- a/index.html
+++ b/index.html
@@ -4,34 +4,388 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>صفحة المنتج الاحترافية</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>متجر التقنية - عرض خاص</title>
+    <!-- خط القاهرة من جوجل -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <style>
-        body {
+        /* CSS المتغيرات والتنسيقات الأساسية */
+        :root {
+            --primary: #2563eb;
+            --primary-dark: #1d4ed8;
+            --accent: #f59e0b;
+            --bg: #f8fafc;
+            --text-dark: #0f172a;
+            --text-light: #64748b;
+            --white: #ffffff;
+            --shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
             font-family: 'Cairo', sans-serif;
         }
-        .feature-card:hover {
-            transform: translateY(-5px);
-            transition: all 0.3s ease;
+
+        body {
+            background-color: var(--bg);
+            color: var(--text-dark);
+            line-height: 1.6;
+            overflow-x: hidden;
         }
-        .gradient-bg {
-            background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        /* الهيدر */
+        header {
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+            height: 70px;
+            display: flex;
+            align-items: center;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
+            border-bottom: 1px solid #e2e8f0;
+        }
+
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+        }
+
+        .logo {
+            font-size: 1.5rem;
+            font-weight: 800;
+            color: var(--primary);
+            text-decoration: none;
+        }
+
+        .logo span { color: var(--text-dark); }
+
+        /* قسم الهيرو */
+        .hero {
+            padding: 140px 0 80px;
+            background: linear-gradient(135deg, #f1f5f9 0%, #e2e8f0 100%);
+            min-height: 90vh;
+            display: flex;
+            align-items: center;
+        }
+
+        .hero-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 50px;
+            align-items: center;
+        }
+
+        .hero-content h1 {
+            font-size: clamp(2rem, 5vw, 3.5rem);
+            font-weight: 800;
+            margin-bottom: 20px;
+            line-height: 1.2;
+        }
+
+        .hero-content p {
+            font-size: 1.2rem;
+            color: var(--text-light);
+            margin-bottom: 30px;
+        }
+
+        .price-wrapper {
+            margin-bottom: 30px;
+            display: flex;
+            align-items: baseline;
+            gap: 10px;
+        }
+
+        .current-price {
+            font-size: 2.5rem;
+            font-weight: 800;
+            color: var(--text-dark);
+        }
+
+        .currency {
+            font-size: 1.2rem;
+            color: var(--text-light);
+            font-weight: 400;
+        }
+
+        .btn {
+            display: inline-block;
+            background: var(--primary);
+            color: var(--white);
+            padding: 16px 40px;
+            border-radius: 12px;
+            text-decoration: none;
+            font-weight: 700;
+            font-size: 1.1rem;
+            transition: all 0.3s ease;
+            box-shadow: 0 10px 15px -3px rgba(37, 99, 235, 0.3);
+            text-align: center;
+        }
+
+        .btn:hover {
+            background: var(--primary-dark);
+            transform: translateY(-3px);
+            box-shadow: 0 20px 25px -5px rgba(37, 99, 235, 0.4);
+        }
+
+        .hero-image {
+            position: relative;
+            display: flex;
+            justify-content: center;
+        }
+
+        .hero-image img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 24px;
+            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.2);
+            transition: transform 0.5s ease;
+        }
+
+        .hero-image:hover img {
+            transform: scale(1.03);
+        }
+
+        /* قسم المميزات */
+        .features {
+            padding: 100px 0;
+            background: var(--white);
+        }
+
+        .section-header {
+            text-align: center;
+            margin-bottom: 60px;
+        }
+
+        .section-header h2 {
+            font-size: 2.2rem;
+            margin-bottom: 15px;
+        }
+
+        .features-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 30px;
+        }
+
+        .feature-item {
+            padding: 40px;
+            background: var(--bg);
+            border-radius: 20px;
+            transition: all 0.3s ease;
+            border: 1px solid #f1f5f9;
+        }
+
+        .feature-item:hover {
+            transform: translateY(-10px);
+            background: var(--white);
+            box-shadow: var(--shadow);
+            border-color: var(--primary);
+        }
+
+        .feature-icon {
+            width: 60px;
+            height: 60px;
+            background: var(--white);
+            border-radius: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.8rem;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1);
+        }
+
+        /* آراء العملاء */
+        .testimonials {
+            padding: 100px 0;
+        }
+
+        .test-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 25px;
+        }
+
+        .test-card {
+            background: var(--white);
+            padding: 30px;
+            border-radius: 20px;
+            box-shadow: 0 4px 6px -1px rgba(0,0,0,0.05);
+        }
+
+        .stars {
+            color: var(--accent);
+            margin-bottom: 15px;
+            font-size: 1.2rem;
+        }
+
+        /* الفوتر */
+        footer {
+            background: #0f172a;
+            color: #94a3b8;
+            padding: 60px 0 30px;
+            text-align: center;
+        }
+
+        .footer-logo {
+            font-size: 2rem;
+            font-weight: 800;
+            color: var(--white);
+            margin-bottom: 20px;
+        }
+
+        /* الاستجابة للهواتف */
+        @media (max-width: 968px) {
+            .hero-grid { grid-template-columns: 1fr; text-align: center; }
+            .hero-content { order: 2; }
+            .hero-image { order: 1; }
+            .price-wrapper { justify-content: center; }
+        }
+
+        @media (max-width: 480px) {
+            .hero { padding-top: 100px; }
+            .btn { width: 100%; }
+            .hero-image img { max-width: 280px; }
         }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
-  }
-}
-</script>
 </head>
-<body class="bg-gray-50 text-gray-900">
-    <div id="root"></div>
+<body>
+
+    <header>
+        <div class="container">
+            <nav>
+                <a href="#" class="logo">TECH<span>STORE</span></a>
+                <a href="#" id="nav-cta" class="btn" style="padding: 10px 20px; font-size: 0.9rem;">اطلب الآن</a>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section class="hero">
+            <div class="container hero-grid">
+                <div class="hero-content">
+                    <h1 id="p-name">جاري التحميل...</h1>
+                    <p id="p-desc"></p>
+                    <div class="price-wrapper">
+                        <span class="current-price" id="p-price"></span>
+                        <span class="currency" id="p-currency"></span>
+                    </div>
+                    <a href="#" id="hero-cta" class="btn">اشترِ الآن واحصل على توصيل مجاني</a>
+                </div>
+                <div class="hero-image">
+                    <img id="p-img" src="" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="features">
+            <div class="container">
+                <div class="section-header">
+                    <h2>لماذا تختار هذا المنتج؟</h2>
+                </div>
+                <div class="features-grid" id="f-grid">
+                    <!-- سيتم حقن المميزات هنا -->
+                </div>
+            </div>
+        </section>
+
+        <section class="testimonials">
+            <div class="container">
+                <div class="section-header">
+                    <h2>ماذا يقول عملاؤنا في المغرب</h2>
+                </div>
+                <div class="test-grid" id="t-grid">
+                    <!-- سيتم حقن الآراء هنا -->
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <div class="footer-logo">TECHSTORE</div>
+            <p>أفضل جودة بأفضل سعر في السوق المغربي.</p>
+            <div style="margin: 30px 0; border-top: 1px solid #1e293b; padding-top: 20px;">
+                <p>&copy; 2025 جميع الحقوق محفوظة لمتجرنا.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script>
+        /**
+         * كائن البيانات المركزي - قم بتغيير هذه القيم لتغيير المحتوى بالكامل
+         */
+        const productData = {
+            name: "ساعة Ultra الذكية الجيل الثامن",
+            description: "التجربة المثالية للساعات الذكية الآن في المغرب. شاشة كاملة، مقاومة للماء، وتتبع دقيق لجميع الأنشطة الرياضية والصحية.",
+            price: "499",
+            currency: "درهم مغربي",
+            imageUrl: "https://images.unsplash.com/photo-1546868891-d5b81961cffe?q=80&w=1000&auto=format&fit=crop",
+            buyLink: "https://wa.me/212600000000?text=أريد_طلب_الساعة_الذكية",
+            features: [
+                { title: "ضد الماء", desc: "تصميم متين يدعم السباحة والغطس بمعيار IP68.", icon: "🌊" },
+                { title: "بطارية خارقة", desc: "استخدام متواصل يصل لـ 10 أيام دون الحاجة لشحن.", icon: "🔋" },
+                { title: "مكالمات بلوتوث", desc: "إمكانية الرد وإجراء المكالمات مباشرة من الساعة.", icon: "📞" },
+                { title: "تتبع الصحة", desc: "مراقبة نبض القلب والأكسجين وجودة النوم بدقة.", icon: "❤️" }
+            ],
+            testimonials: [
+                { user: "يوسف من الدار البيضاء", text: "صراحة جودة الهاردوير ممتازة والساعة كتبان فخمة بزااف.", stars: 5 },
+                { user: "أمينة من مراكش", text: "التوصيل كان سريع والخدمة رائعة، الساعة كما في الصورة.", stars: 5 },
+                { user: "سفيان من الرباط", text: "أفضل قيمة مقابل سعر، البطارية كتصبر ليا سيمانة وزيادة.", stars: 4 }
+            ]
+        };
+
+        // وظيفة تحديث محتوى الصفحة
+        function renderContent() {
+            // تحديث العناصر الأساسية
+            document.title = productData.name;
+            document.getElementById('p-name').textContent = productData.name;
+            document.getElementById('p-desc').textContent = productData.description;
+            document.getElementById('p-price').textContent = productData.price;
+            document.getElementById('p-currency').textContent = productData.currency;
+            document.getElementById('p-img').src = productData.imageUrl;
+            document.getElementById('p-img').alt = productData.name;
+
+            // تحديث روابط الشراء
+            document.getElementById('hero-cta').href = productData.buyLink;
+            document.getElementById('nav-cta').href = productData.buyLink;
+
+            // تحديث المميزات
+            const fGrid = document.getElementById('f-grid');
+            fGrid.innerHTML = productData.features.map(f => `
+                <div class="feature-item">
+                    <div class="feature-icon">${f.icon}</div>
+                    <h3>${f.title}</h3>
+                    <p style="color: var(--text-light); margin-top: 10px;">${f.desc}</p>
+                </div>
+            `).join('');
+
+            // تحديث الآراء
+            const tGrid = document.getElementById('t-grid');
+            tGrid.innerHTML = productData.testimonials.map(t => `
+                <div class="test-card">
+                    <div class="stars">${'★'.repeat(t.stars)}${'☆'.repeat(5 - t.stars)}</div>
+                    <p style="margin-bottom: 15px; font-style: italic;">"${t.text}"</p>
+                    <div style="font-weight: 700; color: var(--primary);">${t.user}</div>
+                </div>
+            `).join('');
+        }
+
+        // تشغيل الوظيفة عند تحميل الصفحة
+        window.onload = renderContent;
+    </script>
 </body>
 </html>
