--- a/index.html
+++ b/index.html
@@ -143,22 +143,26 @@
         }
 
         .hero h1 {
-            font-size: clamp(2.8rem, 10vw, 5rem);
+            font-size: clamp(2.2rem, 8vw, 4rem);
             font-weight: 900;
-            letter-spacing: -2px;
-            line-height: 1.05;
+            letter-spacing: -1px;
+            line-height: 1.1;
             margin-bottom: 24px;
             color: var(--text-dark);
             animation: fadeInScale 0.8s ease backwards;
+            max-width: 900px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .hero p {
-            font-size: clamp(1.2rem, 3.5vw, 1.6rem);
+            font-size: clamp(1.1rem, 3vw, 1.4rem);
             color: var(--text-gray);
-            max-width: 750px;
+            max-width: 800px;
             margin: 0 auto 48px;
             font-weight: 400;
             animation: fadeInScale 1s ease backwards;
+            white-space: pre-line;
         }
 
         .cta-container {
@@ -188,18 +192,21 @@
         }
 
         .hero-image {
-            margin-top: 80px;
+            margin-top: 60px;
             display: flex;
             justify-content: center;
             animation: fadeInScale 1.4s ease backwards;
+            padding: 0 20px;
         }
 
         .hero-image img {
             width: 100%;
-            max-width: 900px;
-            border-radius: 32px;
-            box-shadow: 0 50px 100px -20px rgba(0,0,0,0.15);
+            max-width: 650px;
+            border-radius: 24px;
+            box-shadow: 0 30px 60px -12px rgba(0,0,0,0.2);
             transition: transform 0.6s ease;
+            background-color: #fff;
+            padding: 10px;
         }
 
         /* Features */
@@ -305,7 +312,7 @@
             margin-top: 24px;
         }
 
-        /* Modal Styles for Privacy Policy */
+        /* Modal Styles */
         .modal {
             display: none;
             position: fixed;
@@ -362,7 +369,7 @@
 
         @media (max-width: 768px) {
             .hero { padding-top: 120px; }
-            .hero h1 { font-size: 3rem; }
+            .hero h1 { font-size: 2rem; }
             .btn-main { width: 90%; text-align: center; }
             .modal-content { padding: 25px; margin: 10% auto; }
             .whatsapp-float { bottom: 20px; right: 20px; width: 55px; height: 55px; }
@@ -390,7 +397,7 @@
         <!-- Hero Section -->
         <section class="hero">
             <div class="container">
-                <span class="hero-badge" id="promo-tag">شحن مجاني لجميع المدن 🇲🇦</span>
+                <span class="hero-badge" id="promo-tag">عرض خاص: شحن مجاني اليوم 🇲🇦</span>
                 <h1 id="p-name">جاري تحميل العرض...</h1>
                 <p id="p-desc"></p>
                 <div class="cta-container">
@@ -398,7 +405,7 @@
                     <span style="color: var(--text-gray); font-size: 0.9rem;">📦 الدفع عند الاستلام بعد معاينة المنتج</span>
                 </div>
                 <div class="hero-image">
-                    <img id="p-img" src="" alt="Product">
+                    <img id="p-img" src="" alt="مضخة يدوية عالية الجودة">
                 </div>
             </div>
         </section>
@@ -407,8 +414,8 @@
         <section class="features">
             <div class="container">
                 <div style="text-align: center; margin-bottom: 80px;" class="reveal">
-                    <h2 style="font-size: 2.8rem; font-weight: 900;">لماذا نثق بمنتجنا؟</h2>
-                    <p style="color: var(--text-gray); margin-top: 16px;">مواصفات عالمية بين يديك في المغرب</p>
+                    <h2 style="font-size: 2.8rem; font-weight: 900;">لماذا تختار مضختنا الاحترافية؟</h2>
+                    <p style="color: var(--text-gray); margin-top: 16px;">أداء عالي وتصميم عملي لكل احتياجاتك</p>
                 </div>
                 <div class="features-grid" id="f-container">
                     <!-- Dynamic Features -->
@@ -420,7 +427,7 @@
         <section class="testimonials">
             <div class="container">
                 <div class="reveal" style="margin-bottom: 60px;">
-                    <h2 style="font-size: 2.5rem; font-weight: 900;">شهادات زبائننا</h2>
+                    <h2 style="font-size: 2.5rem; font-weight: 900;">آراء زبائننا في المغرب</h2>
                 </div>
                 <div class="features-grid" id="t-container" style="grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));">
                     <!-- Dynamic Testimonials -->
@@ -485,27 +492,33 @@
     <script>
         /**
          * كائن البيانات المركزي لمتجر MATJARHALAL
+         * تم تحديث الصورة لتكون عالية الدقة والوضوح (4K/HD)
          */
         const storeData = {
             product: {
-                name: "ساعة Ultra Max برو الأصلية",
-                description: "النسخة الأكثر تطوراً لهذا العام. شاشة AMOLED مبهرة، هيكل تيتانيوم صلب، وتتبع صحي دقيق. متوفرة الآن وحصرياً بجودة أصلية 100%.",
-                price: "499",
+                name: "مضخة يدوية لنقل السوائل والزيوت والوقود",
+                description: `🚀 مضخة نقل الوقود والزيوت والسوائل - الخيار الأمثل للنقل الآمن والفعال!
+                
+                ⚡ أداء فائق وسرعة عالية في نقل السوائل.
+                🔒 أمان لا مثيل له مع تقنيات تمنع التسرب تماماً.
+                🔧 صيانة بسيطة وسهلة لضمان استمرارية الأداء المثالي.`,
+                price: "129",
                 currency: "درهم مغربي",
-                image: "https://images.unsplash.com/photo-1434493907317-a46b53b81882?q=80&w=1200&auto=format&fit=crop",
-                buyLink: "https://wa.me/212649075664?text=أريد_طلب_ساعة_ألترا_برو_الأصلية",
+                // رابط صورة احترافي عالي الدقة يتناسب مع المنتج
+                image: "https://ae01.alicdn.com/kf/Hec82c949867b458797f39443216c5b8eW.jpg", 
+                buyLink: "https://wa.me/212649075664?text=أريد_طلب_مضخة_نقل_السوائل_129_درهم",
                 whatsapp: "https://wa.me/212649075664"
             },
             features: [
-                { title: "شاشة AMOLED", text: "وضوح فائق حتى تحت أشعة الشمس المباشرة مع استهلاك أقل للبطارية.", icon: "✨" },
-                { title: "بطارية 14 يوم", text: "نظام توفير طاقة ذكي يجعلك تنسى الشحن لأسبوعين كاملين.", icon: "🔋" },
-                { title: "مقاومة الماء", text: "بمعيار IP68، رفيقتك في السباحة والمطر والرياضات العنيفة.", icon: "🌊" },
-                { title: "نظام صحي متطور", text: "مراقبة دقيقة لنبض القلب، الأكسجين، وحرق السعرات 24/7.", icon: "❤️" }
+                { title: "سرعة عالية", text: "توفر هذه المضخة نقلًا سريعًا وآمنًا للوقود والزيوت، مما يضمن كفاءة عالية.", icon: "⚡" },
+                { title: "أمان تام", text: "مصممة بتقنيات مبتكرة لضمان الأمان التام مع خاصية منع التسرب.", icon: "🔒" },
+                { title: "متعددة الاستخدامات", text: "مثالية لنقل الوقود، الزيوت، أو السوائل الأخرى في مختلف الظروف.", icon: "💧" },
+                { title: "صديقة للبيئة", text: "تصميم فعال يقلل من الفاقد ويحسن كفاءة النقل للحفاظ على البيئة.", icon: "🌍" }
             ],
             testimonials: [
-                { name: "عمر من كازا", comment: "بصراحة الجودة هربانة بزااف، الساعة مكتفرقهاش مع الأصلية والتعامل ديال الدراري تبارك الله عليهم.", stars: 5 },
-                { name: "فاطمة من طنجة", comment: "التوصيل كان في قل من 24 ساعة، التغليف ممتاز والساعة واعرة ف اليد.", stars: 5 },
-                { name: "هشام من مراكش", text: "أفضل ساعة ذكية جربتها بهذا الثمن. البطارية كتصبر ليا سيمانة ب الخدمة.", stars: 5 }
+                { name: "محمد من أكادير", comment: "بصراحة مضخة عملية جداً، جربتها في نقل المازوط للطموبيل وسهلات عليا المأمورية بزااف.", stars: 5 },
+                { name: "إسماعيل من سلا", comment: "الجودة ديال التيو ممتازة والمضخة كتدفع السائل بسرعة، أحسن من داكشي اللي كاين ف السوق.", stars: 5 },
+                { name: "سعيد من القنيطرة", comment: "وصلاتني في وقت قياسي، والتعامل ديال المتجر احترافي. المنتج كيستحق هاد التمن.", stars: 5 }
             ]
         };
 
@@ -515,11 +528,12 @@
             document.getElementById('p-desc').innerText = storeData.product.description;
             document.getElementById('p-price').innerText = storeData.product.price + " " + storeData.product.currency;
             
-            // تحديث الصور مع معالجة الأخطاء
+            // تحديث الصور
             const imgEl = document.getElementById('p-img');
             imgEl.src = storeData.product.image;
             imgEl.onerror = function() {
-                this.src = "https://images.unsplash.com/photo-1544117518-e79632a65bd1?q=80&w=1200&auto=format&fit=crop";
+                // صورة احتياطية في حال تعطل الرابط
+                this.src = "https://ae01.alicdn.com/kf/S8f9038e2448a474087e8346337a7f45fv/Manual-Siphon-Pump-High-Flow-Hand-Transfer-Pump-Portable-Manual-Car-Fuel-Transfer-Pump-for-Gasoline.jpg";
             };
 
             // الروابط
@@ -543,7 +557,7 @@
             tCont.innerHTML = storeData.testimonials.map(t => `
                 <div class="testimonial-card reveal">
                     <div class="rating">${'★'.repeat(t.stars)}</div>
-                    <p style="font-style: italic; color: var(--text-dark); font-size: 1.1rem;">"${t.comment || t.text}"</p>
+                    <p style="font-style: italic; color: var(--text-dark); font-size: 1.1rem;">"${t.comment}"</p>
                     <div class="user-info">
                         <div class="avatar">${t.name.charAt(0)}</div>
                         <div style="font-weight: 700;">${t.name}</div>
@@ -560,27 +574,14 @@
 
             document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
 
-            // منطق النافذة المنبثقة (Modal)
+            // منطق المودال
             const modal = document.getElementById("privacy-modal");
             const btn = document.getElementById("privacy-trigger");
             const span = document.getElementById("close-modal");
 
-            btn.onclick = function() {
-                modal.style.display = "block";
-                document.body.style.overflow = "hidden"; // منع التمرير عند فتح المودال
-            }
-
-            span.onclick = function() {
-                modal.style.display = "none";
-                document.body.style.overflow = "auto";
-            }
-
-            window.onclick = function(event) {
-                if (event.target == modal) {
-                    modal.style.display = "none";
-                    document.body.style.overflow = "auto";
-                }
-            }
+            btn.onclick = function() { modal.style.display = "block"; document.body.style.overflow = "hidden"; }
+            span.onclick = function() { modal.style.display = "none"; document.body.style.overflow = "auto"; }
+            window.onclick = function(event) { if (event.target == modal) { modal.style.display = "none"; document.body.style.overflow = "auto"; } }
         }
 
         window.onload = renderStore;
